--- a/requirements.ipynb
+++ b/requirements.ipynb
@@ -24,6 +24,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Requirements\n",
+    "- Main menu\n",
+    "- Player movement\n",
+    "- Shoot mechanic\n",
+    "- Enemies\n",
+    "- Background\n",
+    "- Shift mechanic\n",
+    "- Death\n",
+    "- Score\n",
+    "- Bombs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extra\n",
+    "- Boss fight\n",
+    "- Second level\n",
+    "- Power system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
